Matplotlib/Seaborn Charts are now supperted

--- a/auto-analyst-backend/requirements.txt
+++ b/auto-analyst-backend/requirements.txt
@@ -56,3 +56,8 @@ websockets==14.2
 wheel==0.45.1
 xgboost-cpu==3.0.2
 bokeh==3.7.3
+pymc==5.23.0
+lightgbm==4.6.0
+arviz==0.21.0
+optuna==4.3.0
+shap==0.45.1
