Different Variants in Templates

--- a/auto-analyst-backend/Dockerfile
+++ b/auto-analyst-backend/Dockerfile
@@ -10,4 +10,14 @@ COPY --chown=user ./requirements.txt requirements.txt
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 COPY --chown=user . /app
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "7860"]
+
+# Make entrypoint script executable
+USER root
+RUN chmod +x /app/entrypoint.sh
+# Make populate script executable
+RUN chmod +x /app/scripts/populate_agent_templates.py
+
+USER user
+
+# Use the entrypoint script instead of directly running uvicorn
+CMD ["/app/entrypoint.sh"]
