--- a/auto-analyst-backend/requirements.txt
+++ b/auto-analyst-backend/requirements.txt
@@ -1,16 +1,16 @@
 aiofiles==24.1.0
 beautifulsoup4==4.13.4
-dspy==2.6.14
+dspy==2.6.27
+litellm==1.75.2
 email_validator==2.2.0
-fastapi==0.111.1
+fastapi==0.115.5
 fastapi-cli==0.0.7
 FastAPI-SQLAlchemy==0.2.1
-fastapi-sso==0.10.0
+fastapi-sso==0.16.0
 groq==0.18.0
-gunicorn==22.0.0
+gunicorn==23.0.0
 huggingface-hub==0.30.2
 joblib==1.4.2
-litellm==1.63.7
 llama-cloud==0.1.19
 llama-cloud-services==0.6.21
 llama-index==0.12.14
@@ -29,15 +29,14 @@ matplotlib-inline==0.1.7
 numpy==2.2.2
 openpyxl==3.1.2
 xlrd==2.0.1
-openai==1.61.0
+openai==1.97.0
 pandas==2.2.3
-polars==1.30.0
+polars==1.31.0
 pillow==11.1.0
 plotly==5.24.1
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-multipart==0.0.9
 requests==2.32.3
 scikit-learn==1.6.1
 scipy==1.15.1
@@ -51,8 +50,8 @@ tiktoken==0.8.0
 tokenizers==0.21.0
 tqdm==4.67.1
 urllib3==2.4.0
-uvicorn==0.22.0
-websockets==14.2
+uvicorn==0.29.0
+websockets>=13.1.0
 wheel==0.45.1
 xgboost-cpu==3.0.2
 bokeh==3.7.3
@@ -61,3 +60,4 @@ lightgbm==4.6.0
 arviz==0.21.0
 optuna==4.3.0
 shap==0.45.1
+litellm[proxy]
